--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.10.2",
+    "superagent": "^0.21.0"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "chai-http": "^1.0.0"
+}
 }
