--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.10.2",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+    "body-parser": "^1.9.2"
   },
   "devDependencies": {
     "chai": "^1.10.0",
