--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.10.2",
+    "jscs": "~1.7.2",
     "superagent": "^0.21.0",
     "body-parser": "^1.9.2"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
-    "chai-http": "^1.0.0"
+    "chai": "^1.9.2",
+    "chai-http": "^1.0.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-simple-mocha": "^0.4.0",
+    "grunt-unicorn": "^0.1.1"
 }
 }
