--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "superagent": "^0.21.0"
   },
   "devDependencies": {
+    "browserify": "^6.3.3",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "debowerify": "^1.0.1",
@@ -21,5 +22,5 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "mocha": "^2.0.1"
-}
+  }
 }
