--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "browserify": "^6.3.3",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jscs": "^1.0.0",
     "debowerify": "^1.0.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
