--- a/package.json
+++ b/package.json
@@ -25,16 +25,9 @@
     "grunt-browserify": "^3.2.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
-    "mocha": "^2.0.1"
-  },
-    "chai": "^1.9.2",
-    "chai-http": "^1.0.0",
-    "grunt": "^0.4.5",
+    "mocha": "^2.0.1",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0",
     "grunt-simple-mocha": "^0.4.0",
-    "grunt-jscs": "^0.8.1",
     "grunt-unicorn": "^0.1.1"
 }
-
 }
